api: expose file.isIncoming as a query param
